--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "quality-check": "npm run typecheck && npm run lint && npm run test && npm run format.fix"
   },
   "dependencies": {
+    "@prisma/client": "5.16.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "prisma": "5.16.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
