security: Remove sensitive files from git tracking
- Remove .env with JWT secrets from tracking
- Remove .confidential/INTERNAL_ROADMAP.md from tracking
- Update .gitignore for better security protection
- Add protection for database files and other secrets
- Rotate JWT_SECRET with cryptographically secure value
- Add IP_SALT for privacy-preserving IP hashing

These files remain in working directory but won't be tracked.
New secrets have been generated automatically for security.

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,32 @@ dist-ssr
 *.sw?
 
 .config/
-!.env
+
+# Environment variables - NEVER commit these
+.env
+.env.local
+.env.production
+.env.staging
+*.env
 
 # Confidential internal files - NOT for git
 .confidential/
+.confidential/*
+
+# Database files (contains user data)
+prisma/dev.db
+prisma/dev.db-journal
+*.db
+*.db-journal
+
+# Secrets and keys
+*.pem
+*.key
+*.p12
+*.pfx
+secrets/
+.secrets/
+
+# Local test data
+test-data/
+*.local.json
