--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     ]
   },
   "scripts": {
-    "dev": "vite --config config/vite.config.ts",
+    "dev": "concurrently \"node --import tsx/esm server/dev.ts\" \"vite --config config/vite.config.ts\"",
+    "dev:frontend": "vite --config config/vite.config.ts",
+    "dev:api": "node --import tsx/esm server/dev.ts",
     "build": "npm run build:client && npm run build:server",
     "build:client": "vite build --config config/vite.config.ts",
     "build:server": "vite build --config config/vite.config.server.ts",
-    "start": "node dist/server/node-build.mjs",
+    "build:frontend": "vite build --config config/vite.config.ts",
+    "start": "node --import tsx/esm server/dev.ts",
+    "start:prod": "node dist/server/node-build.mjs",
     "build:pages": "npm run build:client",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
@@ -78,6 +82,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "^9.2.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
