--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "build:client": "vite build --config config/vite.config.ts",
     "build:server": "vite build --config config/vite.config.server.ts",
     "build:frontend": "vite build --config config/vite.config.ts",
+    "build:prod": "prisma generate && npm run build:client && npm run build:server",
     "start": "node --import tsx/esm server/dev.ts",
-    "start:prod": "node dist/server/node-build.mjs",
+    "start:prod": "prisma generate && node --import tsx/esm server/dev.ts",
     "build:pages": "npm run build:client",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
