Fix: Resolve Prisma field alignment and complete tracking flow
- Fix critical field name mismatches in tracking service:
  * visitorHash  fingerprint (matches Prisma schema)
  * firstVisit  firstSeen
  * totalVisits  pageViews
- Add website tracking code storage alongside website ID for proper tracking isolation
- Fix CORS configuration to use specific origins instead of wildcard
- Add comprehensive logging to tracking and dashboard routes
- Simplify test pages with clear end-to-end testing instructions
- Consolidate documentation to single DEVELOPER_GUIDE.md
- Add website selection dropdown on dashboard
- Add delete functionality to WebsiteManagement with confirmation
- Update .gitignore to exclude confidential_docs folder
- Verify end-to-end: website creation  event tracking  dashboard metrics

Fixes tracking 500 errors and ensures events process successfully with 204 responses

--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,8 @@ dist-ssr
 # Confidential internal files - NOT for git
 .confidential/
 .confidential/*
+confidential_docs/
+confidential_docs/*
 
 # Database files (contains user data)
 prisma/dev.db
