--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ dist-ssr
 .env.production
 .env.staging
 *.env
+env/.env.local
+env/*.local
 
 # Confidential internal files - NOT for git
 .confidential/
